RESOLVED FIXED135999
The style is not updated correctly when the pseudo class :empty is applied on anything but the rightmost element
https://bugs.webkit.org/show_bug.cgi?id=135999
Summary The style is not updated correctly when the pseudo class :empty is applied on...
Benjamin Poulain
Reported 2014-08-15 15:46:03 PDT
The style is not updated correctly when the pseudo class :empty is applied on anything but the rightmost element
Attachments
Patch (42.42 KB, patch)
2014-08-15 15:58 PDT, Benjamin Poulain
no flags
Benjamin Poulain
Comment 1 2014-08-15 15:58:55 PDT
Benjamin Poulain
Comment 2 2014-08-18 13:52:36 PDT
Comment on attachment 236684 [details] Patch Clearing flags on attachment: 236684 Committed r172721: <http://trac.webkit.org/changeset/172721>
Benjamin Poulain
Comment 3 2014-08-18 13:52:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.