Source/WebCore/css/SelectorChecker.cpp
@@ -524,10 +524,10 @@ bool SelectorChecker::checkOne(const SelectorCheckingContext& context) const
                 }
                 if (m_mode == Mode::ResolvingStyle) {
                     element->setStyleAffectedByEmpty();
+                    if (element->document().styleSheetCollection().usesSiblingRules())
+                        element->setStyleOfSiblingsAffectedByEmpty();
                     if (context.elementStyle)
                         context.elementStyle->setEmptyState(result);
-                    else if (element->renderStyle() && (element->document().styleSheetCollection().usesSiblingRules() || element->renderStyle()->unique()))
-                        element->renderStyle()->setEmptyState(result);
                 }
                 return result;
             }
