Source/WebCore/dom/Element.cpp
@@ -1566,6 +1566,11 @@ static void checkForEmptyStyleChange(Element& element)
         if (!style || (!style->emptyState() || element.hasChildNodes()))
             element.setNeedsStyleRecalc();
     }
+
+    if (element.styleOfSiblingsAffectedByEmpty()) {
+        if (Element* parent = element.parentElement())
+            parent->setNeedsStyleRecalc();
+    }
 }
 
 enum SiblingCheckType { FinishedParsingChildren, SiblingElementRemoved, Other };
@@ -2132,6 +2137,11 @@ void Element::setStyleAffectedByEmpty()
     ensureElementRareData().setStyleAffectedByEmpty(true);
 }
 
+void Element::setStyleOfSiblingsAffectedByEmpty()
+{
+    ensureElementRareData().setStyleOfSiblingsAffectedByEmpty(true);
+}
+
 void Element::setChildrenAffectedByActive()
 {
     ensureElementRareData().setChildrenAffectedByActive(true);
@@ -2177,6 +2187,12 @@ bool Element::rareDataStyleAffectedByEmpty() const
 {
     ASSERT(hasRareData());
     return elementRareData()->styleAffectedByEmpty();
+}
+
+bool Element::rareDataStyleOfSiblingsAffectedByEmpty() const
+{
+    ASSERT(hasRareData());
+    return elementRareData()->styleOfSiblingsAffectedByEmpty();
 }
 
 bool Element::rareDataChildrenAffectedByActive() const
